# Live2Diff

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  test.py
configs/: base_config.yaml  disneyPixar.yaml  kFelted.yaml  moxin.yaml  origami.yaml  pixart.yaml  toonyou.yaml
demo/: .gitignore  README.md  app.py  config.py  connection_manager.py  demo_cfg.yaml  demo_cfg_arknight.yaml  main.py  requirements.txt  start.sh  util.py  vid2vid.py
demo/frontend/: vite.config.ts
demo/frontend/src/lib/: lcmLive.ts  mediaStream.ts  store.ts  types.ts
demo/frontend/src/lib/components/: Checkbox.svelte  InputRange.svelte  PipelineOptions.svelte  SeedInput.svelte  Selectlist.svelte  TextArea.svelte  VideoInput.svelte
demo/frontend/src/routes/: +page.svelte
live2diff/: __init__.py  pipeline_stream_animation_depth.py
live2diff/acceleration/tensorrt/: __init__.py  builder.py  engine.py  models.py  utilities.py
live2diff/animatediff/converter/: __init__.py  convert.py  convert_from_ckpt.py  convert_lora_safetensor_to_diffusers.py
live2diff/animatediff/models/: attention.py  depth_utils.py  motion_module.py  positional_encoding.py  resnet.py  stream_motion_module.py  unet_blocks_streaming.py  unet_blocks_warmup.py  unet_depth_streaming.py  unet_depth_warmup.py
live2diff/animatediff/pipeline/: __init__.py  loader.py  pipeline_animatediff_depth.py
live2diff/utils/: config.py  io.py  wrapper.py
scripts/: download.sh
